--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ header section {
 header section .content{
     position: relative;
     left: 370px;
-    margin-top: 10%;
+    top: 10px;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
@@ -184,7 +184,7 @@ header section.content .price_order .price a{
 header section .cards {
     width: 90%;
     height: 140px;
-    margin-top: 60px;
+    top: 40%;
     position: relative;
     /*border: 1px solid #000;*/
     padding-left: 30px;
@@ -311,20 +311,16 @@ header section .social .btns .icons a:hover {
 }
 
 @media screen and (max-width: 730px ) {
-    header {
+    header section {
         width: 100%;
         height: 100%;
-    }
-
-    header nav .right_menu ul li {
-        padding: 3px 6px;
     }
 }
 
 @media screen and (max-width: 670px ) {
     header section .content {
-        left: 24%;
         top: 50%;
+        left: 24%;
     }
 
     header .logo {
@@ -333,5 +329,12 @@ header section .social .btns .icons a:hover {
 
     header section .cards {
         top: 43%;
+    }
+}
+
+@media screen and (max-width: 200px ) {
+    header section .content {
+        top: 50%;
+        left: 24%;
     }
 }
