--- a/day1/styles.css
+++ b/day1/styles.css
@@ -1,13 +1,50 @@
-.Key {
-    border: 4px solid black;
-    border-radius: 5px;
+html {
+    font-size: 10px;
+    background: url('fondo-moderno-lineas.jpg');
+    background-size: cover;
+}
+
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.keys {
+    display: flex;
+    flex: 1;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.key {
+    border: .4rem solid black;
+    border-radius: .5rem;
     margin: 1rem;
     font-size: 1.5rem;
-    padding: 1rem 1.5rem;
-    transition: all 0.07s;
-    width: 100px;
+    padding: 1rem .5rem;
+    transition: all .07s ease;
+    width: 10rem;
     text-align: center;
     color: white;
-    background: rgba(0, 0, 0, 0.4);
-    text-shadow: 0 0 5px black;
+    text-shadow: 0 0 .5rem black;
+}
+
+.playing {
+    transform: scale(1.1);
+    border-color: #865DFF;
+    box-shadow: 0 0 1rem #E384FF;
+}
+
+kbd {
+    display: block;
+    font-size: 4rem;
+}
+
+.sound {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    color: #FFA3FD;
 }
